3.8 ing